--- a/LoginPage.HTML
+++ b/LoginPage.HTML
@@ -5,32 +5,34 @@
   <title>SmartBudget Login</title>
 
   <style>
+    /*This is the style for the body*/
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial, sans-serif;/*Font style*/
       background-color: #f5f8f7;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      display: flex;/*Displays the body in the middle of the page*/
+      justify-content: center;/*Centers contents*/
+      align-items: center;/*Centers contents*/
+      height: 100vh;/*Adjusts height*/
       margin: 0;
     }
-
+    /*This is the style for the login box*/
     .login-container {
       background-color: white;
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);/*Adds a shadow to the login box*/
       width: 300px;
       text-align: center;
     }
 
+    /*Styling for the header*/
     h2 {
       color: #2bb673;
       margin-bottom: 20px;
     }
-
-    input[type="text"],
-    input[type="password"] {
+    /*Styling for the input boxes*/
+    input[type="password"],
+    input[type="email"] {
       width: 100%;
       padding: 10px;
       margin: 8px 0 15px 0;
@@ -39,52 +41,71 @@
       box-sizing: border-box;
       font-size: 1em;
     }
-
+    /*Styling for the login button*/
     button {
-      width: 100%;
+      width: 100%; /*Changes the width of the login button*/
       background-color: #2bb673;
-      color: white;
+      color: white;/*Text color*/
       border: none;
       padding: 12px;
       border-radius: 6px;
       font-size: 1em;
-      cursor: pointer;
+      cursor: pointer;/*Changes the cursor to point when hovering*/
       transition: background-color 0.3s;
     }
 
     button:hover {
-      background-color: #1a8f55;
+      background-color: #1a8f55;/*Changes color of login button on hover*/
     }
-
+    /*Styling for the register link*/
     .register-link {
       display: block;
       margin-top: 15px;
       color: #555;
       font-size: 0.9em;
     }
-
+    /*Styling for the "register" link*/
     .register-link a {
       color: #e74c3c;
       text-decoration: none;
     }
 
     .register-link a:hover {
-      text-decoration: underline;
+      text-decoration: underline;/*On hover, the text is underlined*/
+    }
+    /*Styling for the password link*/
+    .Password-Change-link {
+      display: block;
+      margin-top: 15px;
+      color: #555;
+      font-size: 0.9em;
+    }
+    /*Styling for the "password" link*/
+    .Password-Change-link a {
+      color: #e74c3c;
+      text-decoration: none;
+    }
+
+    .Password-Change-link a:hover {
+      text-decoration: underline;/*On hover, the text is underlined*/
     }
   </style>
 </head>
 
 <body>
-  <div class="login-container">
-    <h2>Login to SmartBudget</h2>
-    <form>
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
-      <button type="button" onclick="window.location.href='MainPage.html'">Login</button>
+  <div class="login-container"><!--Makes a class for the login-->
+    <h2>Login to SmartBudget</h2><!--Header-->
+    <form action="LoginProcess.php" method="POST"><!--Form that calls the php file and stores as a method called POST-->
+      <input type="email" name="user_email" placeholder="Email" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Login</button>
     </form>
 
     <div class="register-link">
-      Don’t have an account? <a href="RegisterPage.html">Register here</a>
+      Don't have an account? <a href="RegisterPage.html">Register here</a>
+    </div>
+    <div class="Password-Change-link">
+      Forgot password <a href="PasswordChange.HTML">Change password</a>
     </div>
   </div>
 </body>
