--- a/MainPage.HTML
+++ b/MainPage.HTML
@@ -4,75 +4,76 @@
 <head>
   <title>SmartBudget Dashboard</title>
   <style>
+    /*Body style*/
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
+      font-family: Arial, sans-serif;/*Font*/
+      margin: 0;  /*Spacing*/
       background-color: #f5f8f7;
     }
-
+     /*Header style*/
     header {
-      background-color: #2bb673;
-      color: white;
-      padding: 20px 40px;
+      background-color: #2bb673; /*Coloring for background*/
+      color: white; /*Text color*/
+      padding: 20px 40px; /*Spacing*/
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: center; /*Aligns items to the center*/
     }
-
+     /*Header 1 style*/
     header h1 {
       margin: 0;
       font-size: 1.8em;
     }
-
+     /*Logout button style*/
     header button {
       background-color: #e74c3c;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 6px;
-      color: white;
-      font-size: 1em;
-      cursor: pointer;
+      border: none;  /*Erases border*/
+      padding: 10px 18px; /*Spacing*/
+      border-radius: 6px; /*Rounds out border*/
+      color: white; /*Text color to white*/
+      font-size: 1em; /*Font sizing*/
+      cursor: pointer; /*Transforms cursor into a point cursor when hovering*/
       transition: background-color 0.3s;
     }
-
+     /*On hover, the button changes color slightly*/
     header button:hover {
       background-color: #c0392b;
     }
-
+     /*Main styling for boxes*/
     main {
       padding: 40px;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
     }
-
+     /*Style for the cards shown on the front page*/
     .card {
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      text-align: center;
+      background-color: white; /*Coloring is set to white*/
+      border-radius: 12px; /*Changes border radius*/
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /*Adds a faint shadow to the cards*/
+      padding: 20px;  /*Spacing*/
+      text-align: center;  /*Aligns text to be centered*/
     }
-
+     /*Card header style*/
     .card h2 {
       margin: 0 0 10px 0;
-      color: #2bb673;
-      font-size: 1.4em;
+      color: #2bb673; /*Text color*/
+      font-size: 1.4em; /*Text font sizing*/
     }
-
+     /*Card style*/
     .card p {
       font-size: 1em;
-      color: #555;
+      color: #555; /*Coloring of text*/
       margin: 0;
     }
-
+     /*Actions style for view report, and settings actions*/
     .actions {
       display: flex;
       justify-content: center;
-      gap: 15px;
-      margin-top: 20px;
+      gap: 15px;  /*Allows gap to be formed between the two buttons*/
+      margin-top: 20px;  /*Adds spacing at the top of the buttons for them to be differentiated from the cards at the top*/
     }
-
+    
     .actions button {
       background-color: #2bb673;
       padding: 10px 16px;
@@ -82,7 +83,7 @@
       cursor: pointer;
       transition: background-color 0.3s;
     }
-
+     /*On hover, the color changes slightly for the buttons*/
     .actions button:hover {
       background-color: #1a8f55;
     }
@@ -106,12 +107,12 @@
     </div>
     <div class="card">
       <h2>Recent Expense</h2>
-      <p>$45 — Groceries</p>
+      <p>$45 Groceries</p>
     </div>
   </main>
 
   <div class="actions">
-    <button onclick="window.location.href='ReportPage.html'">View Report</button>
+    <button onclick="window.location.href='ReportPage.php'">View Report</button>
     <button onclick="window.location.href='SettingsPage.html'">Settings</button>
   </div>
 </body>
