--- a/RegisterPage.HTML
+++ b/RegisterPage.HTML
@@ -4,21 +4,22 @@
 <head>
   <title>SmartBudget Register</title>
   <style>
+    /*Styling of body*/
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial, sans-serif;/*Font*/
       background-color: #f5f8f7;
-      display: flex;
-      justify-content: center;
+      display: flex; /*Centers the display in the middle of the page*/
+      justify-content: center; /*Centers content*/
       align-items: center;
       height: 100vh;
       margin: 0;
       position: relative;
     }
-
+    /*Styling of back button*/
     .back-button {
-      position: absolute;
-      top: 20px;
-      left: 20px;
+      position: absolute; /*Ensures back button is top left corner*/
+      top: 20px; /*Ensures back button is top left corner*/
+      left: 20px; /*Ensures back button is top left corner*/
       background-color: #e74c3c;
       color: white;
       border: none;
@@ -28,16 +29,16 @@
       font-size: 0.95em;
       transition: background-color 0.3s;
     }
-
+    /*On hover, the back button changes color*/
     .back-button:hover {
       background-color: #c0392b;
     }
-
+    /*Styling for register container*/
     .register-container {
       background-color: white;
       padding: 60px 40px 40px 40px;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);/*Adds shadow to container*/
       width: 300px;
       text-align: center;
     }
@@ -46,7 +47,7 @@
       color: #2bb673;
       margin-bottom: 20px;
     }
-
+    /*Styling for the text, password, and email type boxes*/
     input[type="text"],
     input[type="password"],
     input[type="email"] {
@@ -58,7 +59,7 @@
       box-sizing: border-box;
       font-size: 1em;
     }
-
+    /*Styling for the register button*/
     button.register-submit {
       width: 100%;
       background-color: #2bb673;
@@ -71,7 +72,7 @@
       transition: background-color 0.3s;
       margin-top: 10px;
     }
-
+    /*On hover, the register button turns a different shade of green*/
     button.register-submit:hover {
       background-color: #1a8f55;
     }
@@ -80,18 +81,19 @@
 
 <body>
   <button class="back-button" onclick="window.location.href='LoginPage.html'">Back</button>
+  <!--This brings the person back to the login page -->
+
 
   <div class="register-container">
     <h2>Register For SmartBudget</h2>
-    <form>
-      <input type="text" placeholder="First Name" required>
-      <input type="text" placeholder="Last Name" required>
-      <input type="email" placeholder="Email" required>
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit" class="register-submit">Register</button>
+    <form action="register_user.php" method="POST"><!--Calls the register user php file-->
+    <input type="text" name="first_name" placeholder="First Name" required>
+    <input type="text" name="last_name" placeholder="Last Name" required>
+    <input type="email" name="user_email" placeholder="Email" required>
+    <input type="text" name="username" placeholder="Username" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <button type="submit" class="register-submit">Register</button>
     </form>
   </div>
 </body>
-
 </html>
